# twitter-apis

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/application/: services.py
app/bootstrap/: app_factory.py  config.py  env.py  lifecycle.py  routes.py
app/core/: exceptions.py  interfaces.py
app/infrastructure/cache/: cache_service.py
app/infrastructure/http/: client.py
app/infrastructure/twitter/: auth.py  client.py  mapper.py  rate_limiter.py
app/presentation/api/: dependencies.py
app/presentation/api/v1/: hashtags.py  users.py
app/presentation/middleware/: error_handler.py  logging.py
app/presentation/schemas/: common.py  tweet.py
app/utils/: decorators.py  logger.py
tests/: conftest.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_auth.py  test_entities.py  test_mapper.py  test_rate_limiter.py  test_services.py  test_twitter_client.py
