[project]
name = "anymind-twitter-apis"
version = "1.0.0"
description = "Twitter API service for hashtag and user timeline search"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

